# tabber

./: .gitignore  LICENSE.txt  README.md  config.py  llm.py  models.py  pyproject.toml  requirements.txt  tabber.py
.github/workflows/: workflow.yml
gatherers/: events.py  instagram.py  news.py  reddit.py  twitter.py  wikipedia.py
modules/: identification.py  information_gathering.py  location_analysis.py
src/tabber/: __main__.py  api.py  caching.py  config.py  llm.py  models.py  sqlite.py  tabber.py
src/tabber/gatherers/: base.py  events.py  instagram.py  news.py  reddit.py  twitter.py  wikipedia.py
src/tabber/modules/: identification.py  information_gathering.py  location_analysis.py
src/tabber/templates/: dashboard.html
tests/: conftest.py  test_api.py  test_caching.py  test_config.py  test_gatherers.py  test_identification.py  test_information_gathering.py  test_llm.py  test_location_analysis.py  test_models.py  test_prompt_injection.py  test_sqlite.py
