[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabber"
version = "1.0.1"
description = "An OSINT CLI person locator tool"
authors = [
	{name = "Sam", email = "sam@gatewaycorporate.org"}
]
dependencies = [
	"click>=8.1",
	"pydantic>=2.0",
	"openai>=1.0",
	"ddgs>=6.0",
	"requests>=2.31",
	"tweepy>=4.14",
	"praw>=7.7",
	"rich>=13.0"
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "flake8", "httpx>=0.27"]
server = ["fastapi>=0.111", "uvicorn[standard]>=0.30"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src/tabber"]
testpaths = ["tests"]
extrapaths = ["src/tabber"]